@@ -50,7 +50,35 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|MockAnalyzer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|Tokenizer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|DirectoryReader
 import|;
 end_import
 
@@ -93,6 +121,34 @@ operator|.
 name|index
 operator|.
 name|IndexReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriterConfig
 import|;
 end_import
 
@@ -2770,6 +2826,222 @@ argument_list|)
 expr_stmt|;
 block|}
 name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testBoost
+specifier|public
+name|void
+name|testBoost
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setMergePolicy
+argument_list|(
+name|newLogMergePolicy
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field1"
+argument_list|,
+literal|"sometext"
+argument_list|,
+name|StringField
+operator|.
+name|TYPE_STORED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TextField
+argument_list|(
+literal|"field2"
+argument_list|,
+literal|"sometext"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StringField
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"bar"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+comment|// add an 'ok' document
+try|try
+block|{
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+comment|// try to boost with norms omitted
+name|StringField
+name|field
+init|=
+operator|new
+name|StringField
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"baz"
+argument_list|)
+decl_stmt|;
+name|field
+operator|.
+name|setBoost
+argument_list|(
+literal|5.0f
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"didn't get any exception, boost silently discarded"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|expected
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|DirectoryReader
+name|ir
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|iw
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|ir
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"sometext"
+argument_list|,
+name|ir
+operator|.
+name|document
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iw
 operator|.
 name|close
 argument_list|()
