@@ -1859,6 +1859,18 @@ name|getFields
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+operator|!
+name|f
+operator|.
+name|fieldType
+argument_list|()
+operator|.
+name|omitNorms
+argument_list|()
+condition|)
+block|{
 operator|(
 operator|(
 name|Field
@@ -1871,6 +1883,7 @@ argument_list|(
 literal|2.0f
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|writer
 operator|.
@@ -2203,6 +2216,18 @@ name|getFields
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+operator|!
+name|f2
+operator|.
+name|fieldType
+argument_list|()
+operator|.
+name|omitNorms
+argument_list|()
+condition|)
+block|{
 operator|(
 operator|(
 name|Field
@@ -2215,6 +2240,7 @@ argument_list|(
 literal|2.0f
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|String
 name|numFixed
@@ -2366,6 +2392,18 @@ name|getFields
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+operator|!
+name|f2
+operator|.
+name|fieldType
+argument_list|()
+operator|.
+name|omitNorms
+argument_list|()
+condition|)
+block|{
 operator|(
 operator|(
 name|Field
@@ -2378,6 +2416,7 @@ argument_list|(
 literal|2.0f
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|writer
 operator|.
